--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDUSTRIAL</title>
+    <title>INDUSTRIC</title>
     <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- font-awesome icon  -->
@@ -56,8 +56,8 @@
                 <i class="bi bi-list"></i>
             </button>
 
-            <div class="collapse navbar-collapse" id="bork">
-                <ul class="navbar-nav mx-auto">
+            <div class="collapse navbar-collapse" id="industric">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
@@ -138,7 +138,7 @@
                                 <img src="assets/img/equip-1.png" height="60" width="60" alt="Service" />
                               </div>
                               <div class="services-description">
-                                <h1>Welding and Steel</h1>
+                                <h3>Welding and Steel</h3>
                                 <p>
                                   There are many variations of passages of lorem ipsum avaailiable, but the majority have suffered alteration in some form, by injected humour.
                                 </p>
@@ -151,7 +151,7 @@
                                 <img class="icon-2" src="assets/img/equip-2.png" height="60" width="60" alt="Service" />
                               </div>
                               <div class="services-description">
-                                <h1>welding Machine</h1>
+                                <h3>Welding Machine</h3>
                                 <p>
                                   There are many variations of passages of lorem ipsum avaailiable, but the majority have suffered alteration in some form, by injected humour.
                                 </p>
@@ -164,7 +164,7 @@
                             <img class="icon-3" src="assets/img/equip-3.png" height="60" width="60" alt="Service" />
                           </div>
                           <div class="services-description">
-                            <h1>welding Equipment</h1>
+                            <h3>Welding Equipment</h3>
                             <p>
                               There are many variations of passages of lorem ipsum avaailiable, but the majority have suffered alteration in some form, by injected humour.
                             </p>
@@ -371,17 +371,22 @@
     </section>
     <!-- footer  -->
     <footer>
-        <div class="footer">
-            <p>&copy;All Right Reserved Industrial</p>
-            
+        <div class="container-fluid bg-primary text-white">
+            <div class="footer">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p>&copy;All Right Reserved Industrial</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>www.DownlondNewThemes.com</p>
+                    </div>
+                    <div class="col-md-4">
+                        <P>Terms and Condition are privacy</P>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
-
-
-
-
-
-
 
 
 
